# codrustdaemon

./: Cargo.toml  README.md
datastore/src/: data.rs
server/src/: client.rs  configuration.rs  errors.rs  server.rs
shells/src/: asciitable.rs  quote.rs  shells.rs  tokenizer_test.rs
src/: main.rs
util/src/: selector.rs
