[package]
name = "codrustdaemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19" , features = ["derive"]}
indicatif = { version = "0.17.5"}
log = "0.4.19"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"